--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
   </section>
 
   <footer>
-    © 2025 Naadageethe Committee | Designed with ❤️ by LSA Cultural Team
+    © 2025 Naadageethe Committee | Designed By Aayush Patil Technical Team 
   </footer>
 
   <script>
